Scale the model input to get better idea of accuracy overall

--- a/ModelTrainVal.ipynb
+++ b/ModelTrainVal.ipynb
@@ -8,10 +8,11 @@
    "outputs": [],
    "source": [
     "#Import required Libraries\n",
-    "import pandas\n",
+    "import pandas as pd\n",
     "\n",
     "import sklearn\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "import torch\n",
     "from torch.utils.data import DataLoader\n",
@@ -31,8 +32,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load the dataset\n",
-    "housing_price_dataset = pandas.read_csv(\"housing.csv\")\n",
+    "# 1. Load and Preprocess Data\n",
+    "housing_price_dataset = pd.read_csv(\"housing.csv\")\n",
     "housing_price_dataset.columns = housing_price_dataset.columns.str.strip()\n",
     "\n",
     "housing_data_input = housing_price_dataset.drop(columns=[\"median_house_value\", \"ocean_proximity\"])\n",
@@ -45,13 +46,21 @@
     "    shuffle=True,\n",
     ")\n",
     "\n",
-    "X_train = train_df.drop(columns=[\"median_house_value\", \"ocean_proximity\"], errors='ignore')\n",
-    "Y_train = train_df[\"median_house_value\"]\n",
+    "X_train_raw = train_df.drop(columns=[\"median_house_value\", \"ocean_proximity\"], errors='ignore')\n",
+    "Y_train_raw = train_df[\"median_house_value\"]\n",
     "\n",
-    "X_test = test_df.drop(columns=[\"median_house_value\", \"ocean_proximity\"], errors='ignore')\n",
-    "Y_test = test_df[\"median_house_value\"]\n",
+    "X_test_raw = test_df.drop(columns=[\"median_house_value\", \"ocean_proximity\"], errors='ignore')\n",
+    "Y_test_raw = test_df[\"median_house_value\"]\n",
     "\n",
-    "#X_train"
+    "# Scaling\n",
+    "scaler_x = StandardScaler()\n",
+    "scaler_y = StandardScaler()\n",
+    "\n",
+    "X_train = scaler_x.fit_transform(X_train_raw.values)\n",
+    "Y_train = scaler_y.fit_transform(Y_train_raw.values.reshape(-1, 1))\n",
+    "\n",
+    "X_test = scaler_x.transform(X_test_raw.values)\n",
+    "Y_test = scaler_y.transform(Y_test_raw.values.reshape(-1, 1))"
    ]
   },
   {
@@ -61,8 +70,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_dataset = HousePriceDataset(X_train.values, Y_train.values)\n",
-    "val_dataset = HousePriceDataset(X_test.values, Y_test.values)\n",
+    "# 2. Setup DataLoaders\n",
+    "train_dataset = HousePriceDataset(X_train, Y_train)\n",
+    "val_dataset = HousePriceDataset(X_test, Y_test)\n",
     "\n",
     "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=32)"
@@ -75,11 +85,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# 3. Initialize Model\n",
     "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
     "model = HousePricePredictor(input_dim=X_train.shape[1])\n",
     "loss_fn = MSELoss()\n",
-    "optimizer = Adam(model.parameters(), lr=1e-3)\n"
+    "optimizer = Adam(model.parameters(), lr=1e-3)"
    ]
   },
   {
@@ -92,61 +102,64 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch [1/50] Train Loss: 56209520068.7603 Val Loss: nan\n",
-      "Epoch [2/50] Train Loss: 56207128774.8760 Val Loss: nan\n",
-      "Epoch [3/50] Train Loss: 56196467356.5620 Val Loss: nan\n",
-      "Epoch [4/50] Train Loss: 56186054829.4876 Val Loss: nan\n",
-      "Epoch [5/50] Train Loss: 56187666901.6860 Val Loss: nan\n",
-      "Epoch [6/50] Train Loss: 56173400977.9835 Val Loss: nan\n",
-      "Epoch [7/50] Train Loss: 56183410726.0826 Val Loss: nan\n",
-      "Epoch [8/50] Train Loss: 56180030172.0331 Val Loss: nan\n",
-      "Epoch [9/50] Train Loss: 56165552618.8430 Val Loss: nan\n",
-      "Epoch [10/50] Train Loss: 56154355563.9008 Val Loss: nan\n",
-      "Epoch [11/50] Train Loss: 56145321670.8760 Val Loss: nan\n",
-      "Epoch [12/50] Train Loss: 56159480565.4215 Val Loss: nan\n",
-      "Epoch [13/50] Train Loss: 56157174640.1322 Val Loss: nan\n",
-      "Epoch [14/50] Train Loss: 56145286732.1653 Val Loss: nan\n",
-      "Epoch [15/50] Train Loss: 56153151107.1736 Val Loss: nan\n",
-      "Epoch [16/50] Train Loss: 56138115114.3140 Val Loss: nan\n",
-      "Epoch [17/50] Train Loss: 56127094047.7355 Val Loss: nan\n",
-      "Epoch [18/50] Train Loss: 56137610041.1240 Val Loss: nan\n",
-      "Epoch [19/50] Train Loss: 56125614232.3306 Val Loss: nan\n",
-      "Epoch [20/50] Train Loss: 56122260065.3223 Val Loss: nan\n",
-      "Epoch [21/50] Train Loss: 56124241361.4545 Val Loss: nan\n",
-      "Epoch [22/50] Train Loss: 56103240238.5455 Val Loss: nan\n",
-      "Epoch [23/50] Train Loss: 56101413909.1570 Val Loss: nan\n",
-      "Epoch [24/50] Train Loss: 56107327674.1818 Val Loss: nan\n",
-      "Epoch [25/50] Train Loss: 56102284664.5950 Val Loss: nan\n",
-      "Epoch [26/50] Train Loss: 56084233423.3388 Val Loss: nan\n",
-      "Epoch [27/50] Train Loss: 56087617227.1074 Val Loss: nan\n",
-      "Epoch [28/50] Train Loss: 56079465044.6281 Val Loss: nan\n",
-      "Epoch [29/50] Train Loss: 56077079437.7521 Val Loss: nan\n",
-      "Epoch [30/50] Train Loss: 56073261614.5455 Val Loss: nan\n",
-      "Epoch [31/50] Train Loss: 56076751161.1240 Val Loss: nan\n",
-      "Epoch [32/50] Train Loss: 56069632275.0413 Val Loss: nan\n",
-      "Epoch [33/50] Train Loss: 56069136697.1240 Val Loss: nan\n",
-      "Epoch [34/50] Train Loss: 56045632338.5124 Val Loss: nan\n",
-      "Epoch [35/50] Train Loss: 56056242235.2397 Val Loss: nan\n",
-      "Epoch [36/50] Train Loss: 56044207091.3058 Val Loss: nan\n",
-      "Epoch [37/50] Train Loss: 56040298572.1653 Val Loss: nan\n",
-      "Epoch [38/50] Train Loss: 56044591946.0496 Val Loss: nan\n",
-      "Epoch [39/50] Train Loss: 56036975950.2810 Val Loss: nan\n",
-      "Epoch [40/50] Train Loss: 56033471822.2810 Val Loss: nan\n",
-      "Epoch [41/50] Train Loss: 56026709630.9421 Val Loss: nan\n",
-      "Epoch [42/50] Train Loss: 56030629545.2562 Val Loss: nan\n",
-      "Epoch [43/50] Train Loss: 56027224931.4380 Val Loss: nan\n",
-      "Epoch [44/50] Train Loss: 56010215728.6612 Val Loss: nan\n",
-      "Epoch [45/50] Train Loss: 56011840583.9339 Val Loss: nan\n",
-      "Epoch [46/50] Train Loss: 56011609413.8182 Val Loss: nan\n",
-      "Epoch [47/50] Train Loss: 55992118225.4545 Val Loss: nan\n",
-      "Epoch [48/50] Train Loss: 55990183754.0496 Val Loss: nan\n",
-      "Epoch [49/50] Train Loss: 55993867907.1736 Val Loss: nan\n",
-      "Epoch [50/50] Train Loss: 55983240263.9339 Val Loss: nan\n"
+      "Starting model training on cpu...\n",
+      "Epoch [1/50] Train Loss: 0.3508 Val Loss: nan\n",
+      "Epoch [2/50] Train Loss: 0.2920 Val Loss: nan\n",
+      "Epoch [3/50] Train Loss: 0.2788 Val Loss: nan\n",
+      "Epoch [4/50] Train Loss: 0.2712 Val Loss: nan\n",
+      "Epoch [5/50] Train Loss: 0.2649 Val Loss: nan\n",
+      "Epoch [6/50] Train Loss: 0.2593 Val Loss: nan\n",
+      "Epoch [7/50] Train Loss: 0.2547 Val Loss: nan\n",
+      "Epoch [8/50] Train Loss: 0.2466 Val Loss: nan\n",
+      "Epoch [9/50] Train Loss: 0.2406 Val Loss: nan\n",
+      "Epoch [10/50] Train Loss: 0.2370 Val Loss: nan\n",
+      "Epoch [11/50] Train Loss: 0.2334 Val Loss: nan\n",
+      "Epoch [12/50] Train Loss: 0.2283 Val Loss: nan\n",
+      "Epoch [13/50] Train Loss: 0.2256 Val Loss: nan\n",
+      "Epoch [14/50] Train Loss: 0.2240 Val Loss: nan\n",
+      "Epoch [15/50] Train Loss: 0.2215 Val Loss: nan\n",
+      "Epoch [16/50] Train Loss: 0.2194 Val Loss: nan\n",
+      "Epoch [17/50] Train Loss: 0.2194 Val Loss: nan\n",
+      "Epoch [18/50] Train Loss: 0.2168 Val Loss: nan\n",
+      "Epoch [19/50] Train Loss: 0.2151 Val Loss: nan\n",
+      "Epoch [20/50] Train Loss: 0.2133 Val Loss: nan\n",
+      "Epoch [21/50] Train Loss: 0.2125 Val Loss: nan\n",
+      "Epoch [22/50] Train Loss: 0.2111 Val Loss: nan\n",
+      "Epoch [23/50] Train Loss: 0.2099 Val Loss: nan\n",
+      "Epoch [24/50] Train Loss: 0.2089 Val Loss: nan\n",
+      "Epoch [25/50] Train Loss: 0.2075 Val Loss: nan\n",
+      "Epoch [26/50] Train Loss: 0.2071 Val Loss: nan\n",
+      "Epoch [27/50] Train Loss: 0.2058 Val Loss: nan\n",
+      "Epoch [28/50] Train Loss: 0.2040 Val Loss: nan\n",
+      "Epoch [29/50] Train Loss: 0.2045 Val Loss: nan\n",
+      "Epoch [30/50] Train Loss: 0.2024 Val Loss: nan\n",
+      "Epoch [31/50] Train Loss: 0.2020 Val Loss: nan\n",
+      "Epoch [32/50] Train Loss: 0.2016 Val Loss: nan\n",
+      "Epoch [33/50] Train Loss: 0.2011 Val Loss: nan\n",
+      "Epoch [34/50] Train Loss: 0.2008 Val Loss: nan\n",
+      "Epoch [35/50] Train Loss: 0.2005 Val Loss: nan\n",
+      "Epoch [36/50] Train Loss: 0.1999 Val Loss: nan\n",
+      "Epoch [37/50] Train Loss: 0.1989 Val Loss: nan\n",
+      "Epoch [38/50] Train Loss: 0.1985 Val Loss: nan\n",
+      "Epoch [39/50] Train Loss: 0.2001 Val Loss: nan\n",
+      "Epoch [40/50] Train Loss: 0.1972 Val Loss: nan\n",
+      "Epoch [41/50] Train Loss: 0.1964 Val Loss: nan\n",
+      "Epoch [42/50] Train Loss: 0.1970 Val Loss: nan\n",
+      "Epoch [43/50] Train Loss: 0.1963 Val Loss: nan\n",
+      "Epoch [44/50] Train Loss: 0.1945 Val Loss: nan\n",
+      "Epoch [45/50] Train Loss: 0.1947 Val Loss: nan\n",
+      "Epoch [46/50] Train Loss: 0.1944 Val Loss: nan\n",
+      "Epoch [47/50] Train Loss: 0.1944 Val Loss: nan\n",
+      "Epoch [48/50] Train Loss: 0.1933 Val Loss: nan\n",
+      "Epoch [49/50] Train Loss: 0.1933 Val Loss: nan\n",
+      "Epoch [50/50] Train Loss: 0.1924 Val Loss: nan\n"
      ]
     }
    ],
    "source": [
+    "# 4. Training Loop\n",
     "num_epochs = 50\n",
+    "print(f\"Starting model training on {device}...\")\n",
     "\n",
     "for epoch in range(num_epochs):\n",
     "    train_loss = model_training_epoch(\n",
@@ -168,7 +181,7 @@
     "        f\"Epoch [{epoch+1}/{num_epochs}] \"\n",
     "        f\"Train Loss: {train_loss:.4f} \"\n",
     "        f\"Val Loss: {val_loss:.4f}\"\n",
-    "    )\n"
+    "    )"
    ]
   }
  ],
