Modify codebase structure to separate different parts and stages of model training and inference

--- a/training-validation/ModelTrainVal.ipynb
+++ b/training-validation/ModelTrainVal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "4a21a61d",
    "metadata": {},
    "outputs": [],
@@ -19,21 +19,24 @@
     "from torch.optim import Adam\n",
     "from torch.nn import MSELoss\n",
     "\n",
-    "from HousePriceDataset import HousePriceDataset\n",
-    "from PredictorModel import HousePricePredictor\n",
+    "import sys\n",
+    "sys.path.append('..')\n",
+    "\n",
+    "from data.HousePriceDataset import HousePriceDataset\n",
+    "from model.PredictorModel import HousePricePredictor\n",
     "from ModelTrainingEpoch import model_training_epoch\n",
     "from ModelValidationEpoch import model_validation_epoch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "932b030b",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1. Load and Preprocess Data\n",
-    "housing_price_dataset = pd.read_csv(\"housing.csv\")\n",
+    "housing_price_dataset = pd.read_csv(\"../data/housing.csv\")\n",
     "housing_price_dataset.columns = housing_price_dataset.columns.str.strip()\n",
     "\n",
     "housing_data_input = housing_price_dataset.drop(columns=[\"median_house_value\", \"ocean_proximity\"])\n",
@@ -65,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "427e497a",
    "metadata": {},
    "outputs": [],
@@ -80,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "id": "9b1d52e4",
    "metadata": {},
    "outputs": [],
@@ -94,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "a5c78a44",
    "metadata": {},
    "outputs": [
@@ -103,56 +106,56 @@
      "output_type": "stream",
      "text": [
       "Starting model training on cpu...\n",
-      "Epoch [1/50] Train Loss: 0.3508 Val Loss: nan\n",
-      "Epoch [2/50] Train Loss: 0.2920 Val Loss: nan\n",
-      "Epoch [3/50] Train Loss: 0.2788 Val Loss: nan\n",
-      "Epoch [4/50] Train Loss: 0.2712 Val Loss: nan\n",
-      "Epoch [5/50] Train Loss: 0.2649 Val Loss: nan\n",
-      "Epoch [6/50] Train Loss: 0.2593 Val Loss: nan\n",
-      "Epoch [7/50] Train Loss: 0.2547 Val Loss: nan\n",
-      "Epoch [8/50] Train Loss: 0.2466 Val Loss: nan\n",
-      "Epoch [9/50] Train Loss: 0.2406 Val Loss: nan\n",
-      "Epoch [10/50] Train Loss: 0.2370 Val Loss: nan\n",
-      "Epoch [11/50] Train Loss: 0.2334 Val Loss: nan\n",
-      "Epoch [12/50] Train Loss: 0.2283 Val Loss: nan\n",
-      "Epoch [13/50] Train Loss: 0.2256 Val Loss: nan\n",
-      "Epoch [14/50] Train Loss: 0.2240 Val Loss: nan\n",
-      "Epoch [15/50] Train Loss: 0.2215 Val Loss: nan\n",
-      "Epoch [16/50] Train Loss: 0.2194 Val Loss: nan\n",
-      "Epoch [17/50] Train Loss: 0.2194 Val Loss: nan\n",
+      "Epoch [1/50] Train Loss: 0.3555 Val Loss: nan\n",
+      "Epoch [2/50] Train Loss: 0.2926 Val Loss: nan\n",
+      "Epoch [3/50] Train Loss: 0.2756 Val Loss: nan\n",
+      "Epoch [4/50] Train Loss: 0.2660 Val Loss: nan\n",
+      "Epoch [5/50] Train Loss: 0.2595 Val Loss: nan\n",
+      "Epoch [6/50] Train Loss: 0.2501 Val Loss: nan\n",
+      "Epoch [7/50] Train Loss: 0.2430 Val Loss: nan\n",
+      "Epoch [8/50] Train Loss: 0.2394 Val Loss: nan\n",
+      "Epoch [9/50] Train Loss: 0.2349 Val Loss: nan\n",
+      "Epoch [10/50] Train Loss: 0.2319 Val Loss: nan\n",
+      "Epoch [11/50] Train Loss: 0.2300 Val Loss: nan\n",
+      "Epoch [12/50] Train Loss: 0.2259 Val Loss: nan\n",
+      "Epoch [13/50] Train Loss: 0.2238 Val Loss: nan\n",
+      "Epoch [14/50] Train Loss: 0.2227 Val Loss: nan\n",
+      "Epoch [15/50] Train Loss: 0.2217 Val Loss: nan\n",
+      "Epoch [16/50] Train Loss: 0.2197 Val Loss: nan\n",
+      "Epoch [17/50] Train Loss: 0.2173 Val Loss: nan\n",
       "Epoch [18/50] Train Loss: 0.2168 Val Loss: nan\n",
-      "Epoch [19/50] Train Loss: 0.2151 Val Loss: nan\n",
-      "Epoch [20/50] Train Loss: 0.2133 Val Loss: nan\n",
-      "Epoch [21/50] Train Loss: 0.2125 Val Loss: nan\n",
-      "Epoch [22/50] Train Loss: 0.2111 Val Loss: nan\n",
-      "Epoch [23/50] Train Loss: 0.2099 Val Loss: nan\n",
-      "Epoch [24/50] Train Loss: 0.2089 Val Loss: nan\n",
+      "Epoch [19/50] Train Loss: 0.2135 Val Loss: nan\n",
+      "Epoch [20/50] Train Loss: 0.2140 Val Loss: nan\n",
+      "Epoch [21/50] Train Loss: 0.2130 Val Loss: nan\n",
+      "Epoch [22/50] Train Loss: 0.2117 Val Loss: nan\n",
+      "Epoch [23/50] Train Loss: 0.2101 Val Loss: nan\n",
+      "Epoch [24/50] Train Loss: 0.2100 Val Loss: nan\n",
       "Epoch [25/50] Train Loss: 0.2075 Val Loss: nan\n",
-      "Epoch [26/50] Train Loss: 0.2071 Val Loss: nan\n",
-      "Epoch [27/50] Train Loss: 0.2058 Val Loss: nan\n",
-      "Epoch [28/50] Train Loss: 0.2040 Val Loss: nan\n",
-      "Epoch [29/50] Train Loss: 0.2045 Val Loss: nan\n",
-      "Epoch [30/50] Train Loss: 0.2024 Val Loss: nan\n",
-      "Epoch [31/50] Train Loss: 0.2020 Val Loss: nan\n",
-      "Epoch [32/50] Train Loss: 0.2016 Val Loss: nan\n",
-      "Epoch [33/50] Train Loss: 0.2011 Val Loss: nan\n",
-      "Epoch [34/50] Train Loss: 0.2008 Val Loss: nan\n",
-      "Epoch [35/50] Train Loss: 0.2005 Val Loss: nan\n",
-      "Epoch [36/50] Train Loss: 0.1999 Val Loss: nan\n",
-      "Epoch [37/50] Train Loss: 0.1989 Val Loss: nan\n",
-      "Epoch [38/50] Train Loss: 0.1985 Val Loss: nan\n",
-      "Epoch [39/50] Train Loss: 0.2001 Val Loss: nan\n",
-      "Epoch [40/50] Train Loss: 0.1972 Val Loss: nan\n",
-      "Epoch [41/50] Train Loss: 0.1964 Val Loss: nan\n",
-      "Epoch [42/50] Train Loss: 0.1970 Val Loss: nan\n",
-      "Epoch [43/50] Train Loss: 0.1963 Val Loss: nan\n",
-      "Epoch [44/50] Train Loss: 0.1945 Val Loss: nan\n",
-      "Epoch [45/50] Train Loss: 0.1947 Val Loss: nan\n",
-      "Epoch [46/50] Train Loss: 0.1944 Val Loss: nan\n",
-      "Epoch [47/50] Train Loss: 0.1944 Val Loss: nan\n",
-      "Epoch [48/50] Train Loss: 0.1933 Val Loss: nan\n",
-      "Epoch [49/50] Train Loss: 0.1933 Val Loss: nan\n",
-      "Epoch [50/50] Train Loss: 0.1924 Val Loss: nan\n"
+      "Epoch [26/50] Train Loss: 0.2082 Val Loss: nan\n",
+      "Epoch [27/50] Train Loss: 0.2065 Val Loss: nan\n",
+      "Epoch [28/50] Train Loss: 0.2060 Val Loss: nan\n",
+      "Epoch [29/50] Train Loss: 0.2060 Val Loss: nan\n",
+      "Epoch [30/50] Train Loss: 0.2048 Val Loss: nan\n",
+      "Epoch [31/50] Train Loss: 0.2049 Val Loss: nan\n",
+      "Epoch [32/50] Train Loss: 0.2019 Val Loss: nan\n",
+      "Epoch [33/50] Train Loss: 0.2032 Val Loss: nan\n",
+      "Epoch [34/50] Train Loss: 0.2027 Val Loss: nan\n",
+      "Epoch [35/50] Train Loss: 0.2010 Val Loss: nan\n",
+      "Epoch [36/50] Train Loss: 0.2010 Val Loss: nan\n",
+      "Epoch [37/50] Train Loss: 0.2004 Val Loss: nan\n",
+      "Epoch [38/50] Train Loss: 0.1993 Val Loss: nan\n",
+      "Epoch [39/50] Train Loss: 0.1995 Val Loss: nan\n",
+      "Epoch [40/50] Train Loss: 0.1990 Val Loss: nan\n",
+      "Epoch [41/50] Train Loss: 0.1980 Val Loss: nan\n",
+      "Epoch [42/50] Train Loss: 0.1986 Val Loss: nan\n",
+      "Epoch [43/50] Train Loss: 0.1984 Val Loss: nan\n",
+      "Epoch [44/50] Train Loss: 0.1980 Val Loss: nan\n",
+      "Epoch [45/50] Train Loss: 0.1968 Val Loss: nan\n",
+      "Epoch [46/50] Train Loss: 0.1966 Val Loss: nan\n",
+      "Epoch [47/50] Train Loss: 0.1967 Val Loss: nan\n",
+      "Epoch [48/50] Train Loss: 0.1967 Val Loss: nan\n",
+      "Epoch [49/50] Train Loss: 0.1964 Val Loss: nan\n",
+      "Epoch [50/50] Train Loss: 0.1947 Val Loss: nan\n"
      ]
     }
    ],
@@ -182,6 +185,16 @@
     "        f\"Train Loss: {train_loss:.4f} \"\n",
     "        f\"Val Loss: {val_loss:.4f}\"\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "326537b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 5. Export the trained model for future"
    ]
   }
  ],
