Save the trained model for inference/prediction

--- a/training-validation/ModelTrainVal.ipynb
+++ b/training-validation/ModelTrainVal.ipynb
@@ -194,7 +194,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. Export the trained model for future"
+    "# 5. Export the trained model for future\n",
+    "import joblib\n",
+    "\n",
+    "# Assuming 'scaler' is your fitted StandardScaler\n",
+    "scaler_path = \"scaler.joblib\"\n",
+    "\n",
+    "# Save the scaler\n",
+    "joblib.dump(scaler, scaler_path)\n",
+    "print(f\"Scaler saved to {scaler_path}\")\n",
+    "# Define path\n",
+    "model_path = \"inference/model_parameters.pth\"\n",
+    "\n",
+    "# Save the state_dict (model weights and biases [parameters])\n",
+    "torch.save(model.state_dict(), model_path)\n",
+    "print(f\"Model saved to {model_path}\")"
    ]
   }
  ],
