Modify the training loop to run on gpu and increase batch number to train faster for cuda parallel processing

--- a/training_validation/ModelTrainVal.ipynb
+++ b/training_validation/ModelTrainVal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "id": "4a21a61d",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "id": "932b030b",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "id": "427e497a",
    "metadata": {},
    "outputs": [],
@@ -77,27 +77,29 @@
     "train_dataset = HousePriceDataset(X_train, Y_train)\n",
     "val_dataset = HousePriceDataset(X_test, Y_test)\n",
     "\n",
-    "train_loader = DataLoader(train_dataset, batch_size=32, shuffle=True)\n",
-    "val_loader = DataLoader(val_dataset, batch_size=32)"
+    "train_loader = DataLoader(train_dataset, batch_size=1024, shuffle=True)\n",
+    "val_loader = DataLoader(val_dataset, batch_size=1024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "id": "9b1d52e4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 3. Initialize Model\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "model = HousePricePredictor(input_dim=X_train.shape[1])\n",
+    "device = torch.device(\"cuda\")\n",
+    "model_inp = X_train.shape[1]\n",
+    "model = HousePricePredictor(input_dim=model_inp)\n",
+    "model.to(device)\n",
     "loss_fn = MSELoss()\n",
     "optimizer = Adam(model.parameters(), lr=1e-3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "id": "a5c78a44",
    "metadata": {},
    "outputs": [
@@ -105,57 +107,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting model training on cpu...\n",
-      "Epoch [1/50] Train Loss: 0.3555 Val Loss: nan\n",
-      "Epoch [2/50] Train Loss: 0.2926 Val Loss: nan\n",
-      "Epoch [3/50] Train Loss: 0.2756 Val Loss: nan\n",
-      "Epoch [4/50] Train Loss: 0.2660 Val Loss: nan\n",
-      "Epoch [5/50] Train Loss: 0.2595 Val Loss: nan\n",
-      "Epoch [6/50] Train Loss: 0.2501 Val Loss: nan\n",
-      "Epoch [7/50] Train Loss: 0.2430 Val Loss: nan\n",
-      "Epoch [8/50] Train Loss: 0.2394 Val Loss: nan\n",
-      "Epoch [9/50] Train Loss: 0.2349 Val Loss: nan\n",
-      "Epoch [10/50] Train Loss: 0.2319 Val Loss: nan\n",
-      "Epoch [11/50] Train Loss: 0.2300 Val Loss: nan\n",
-      "Epoch [12/50] Train Loss: 0.2259 Val Loss: nan\n",
-      "Epoch [13/50] Train Loss: 0.2238 Val Loss: nan\n",
-      "Epoch [14/50] Train Loss: 0.2227 Val Loss: nan\n",
-      "Epoch [15/50] Train Loss: 0.2217 Val Loss: nan\n",
-      "Epoch [16/50] Train Loss: 0.2197 Val Loss: nan\n",
-      "Epoch [17/50] Train Loss: 0.2173 Val Loss: nan\n",
-      "Epoch [18/50] Train Loss: 0.2168 Val Loss: nan\n",
-      "Epoch [19/50] Train Loss: 0.2135 Val Loss: nan\n",
-      "Epoch [20/50] Train Loss: 0.2140 Val Loss: nan\n",
-      "Epoch [21/50] Train Loss: 0.2130 Val Loss: nan\n",
-      "Epoch [22/50] Train Loss: 0.2117 Val Loss: nan\n",
-      "Epoch [23/50] Train Loss: 0.2101 Val Loss: nan\n",
-      "Epoch [24/50] Train Loss: 0.2100 Val Loss: nan\n",
-      "Epoch [25/50] Train Loss: 0.2075 Val Loss: nan\n",
-      "Epoch [26/50] Train Loss: 0.2082 Val Loss: nan\n",
-      "Epoch [27/50] Train Loss: 0.2065 Val Loss: nan\n",
-      "Epoch [28/50] Train Loss: 0.2060 Val Loss: nan\n",
-      "Epoch [29/50] Train Loss: 0.2060 Val Loss: nan\n",
-      "Epoch [30/50] Train Loss: 0.2048 Val Loss: nan\n",
-      "Epoch [31/50] Train Loss: 0.2049 Val Loss: nan\n",
-      "Epoch [32/50] Train Loss: 0.2019 Val Loss: nan\n",
-      "Epoch [33/50] Train Loss: 0.2032 Val Loss: nan\n",
-      "Epoch [34/50] Train Loss: 0.2027 Val Loss: nan\n",
-      "Epoch [35/50] Train Loss: 0.2010 Val Loss: nan\n",
-      "Epoch [36/50] Train Loss: 0.2010 Val Loss: nan\n",
-      "Epoch [37/50] Train Loss: 0.2004 Val Loss: nan\n",
-      "Epoch [38/50] Train Loss: 0.1993 Val Loss: nan\n",
-      "Epoch [39/50] Train Loss: 0.1995 Val Loss: nan\n",
-      "Epoch [40/50] Train Loss: 0.1990 Val Loss: nan\n",
-      "Epoch [41/50] Train Loss: 0.1980 Val Loss: nan\n",
-      "Epoch [42/50] Train Loss: 0.1986 Val Loss: nan\n",
-      "Epoch [43/50] Train Loss: 0.1984 Val Loss: nan\n",
-      "Epoch [44/50] Train Loss: 0.1980 Val Loss: nan\n",
-      "Epoch [45/50] Train Loss: 0.1968 Val Loss: nan\n",
-      "Epoch [46/50] Train Loss: 0.1966 Val Loss: nan\n",
-      "Epoch [47/50] Train Loss: 0.1967 Val Loss: nan\n",
-      "Epoch [48/50] Train Loss: 0.1967 Val Loss: nan\n",
-      "Epoch [49/50] Train Loss: 0.1964 Val Loss: nan\n",
-      "Epoch [50/50] Train Loss: 0.1947 Val Loss: nan\n"
+      "Starting model training on cuda...\n",
+      "Epoch [1/50] Train Loss: 0.7301 Val Loss: nan\n",
+      "Epoch [2/50] Train Loss: 0.4406 Val Loss: nan\n",
+      "Epoch [3/50] Train Loss: 0.3873 Val Loss: nan\n",
+      "Epoch [4/50] Train Loss: 0.3533 Val Loss: nan\n",
+      "Epoch [5/50] Train Loss: 0.3507 Val Loss: nan\n",
+      "Epoch [6/50] Train Loss: 0.3383 Val Loss: nan\n",
+      "Epoch [7/50] Train Loss: 0.3288 Val Loss: nan\n",
+      "Epoch [8/50] Train Loss: 0.3220 Val Loss: nan\n",
+      "Epoch [9/50] Train Loss: 0.3171 Val Loss: nan\n",
+      "Epoch [10/50] Train Loss: 0.3173 Val Loss: nan\n",
+      "Epoch [11/50] Train Loss: 0.3060 Val Loss: nan\n",
+      "Epoch [12/50] Train Loss: 0.3044 Val Loss: nan\n",
+      "Epoch [13/50] Train Loss: 0.3039 Val Loss: nan\n",
+      "Epoch [14/50] Train Loss: 0.2939 Val Loss: nan\n",
+      "Epoch [15/50] Train Loss: 0.2908 Val Loss: nan\n",
+      "Epoch [16/50] Train Loss: 0.2862 Val Loss: nan\n",
+      "Epoch [17/50] Train Loss: 0.2794 Val Loss: nan\n",
+      "Epoch [18/50] Train Loss: 0.2824 Val Loss: nan\n",
+      "Epoch [19/50] Train Loss: 0.2809 Val Loss: nan\n",
+      "Epoch [20/50] Train Loss: 0.2745 Val Loss: nan\n",
+      "Epoch [21/50] Train Loss: 0.2791 Val Loss: nan\n",
+      "Epoch [22/50] Train Loss: 0.2719 Val Loss: nan\n",
+      "Epoch [23/50] Train Loss: 0.2694 Val Loss: nan\n",
+      "Epoch [24/50] Train Loss: 0.2680 Val Loss: nan\n",
+      "Epoch [25/50] Train Loss: 0.2636 Val Loss: nan\n",
+      "Epoch [26/50] Train Loss: 0.2628 Val Loss: nan\n",
+      "Epoch [27/50] Train Loss: 0.2615 Val Loss: nan\n",
+      "Epoch [28/50] Train Loss: 0.2628 Val Loss: nan\n",
+      "Epoch [29/50] Train Loss: 0.2639 Val Loss: nan\n",
+      "Epoch [30/50] Train Loss: 0.2560 Val Loss: nan\n",
+      "Epoch [31/50] Train Loss: 0.2647 Val Loss: nan\n",
+      "Epoch [32/50] Train Loss: 0.2527 Val Loss: nan\n",
+      "Epoch [33/50] Train Loss: 0.2517 Val Loss: nan\n",
+      "Epoch [34/50] Train Loss: 0.2549 Val Loss: nan\n",
+      "Epoch [35/50] Train Loss: 0.2498 Val Loss: nan\n",
+      "Epoch [36/50] Train Loss: 0.2545 Val Loss: nan\n",
+      "Epoch [37/50] Train Loss: 0.2488 Val Loss: nan\n",
+      "Epoch [38/50] Train Loss: 0.2498 Val Loss: nan\n",
+      "Epoch [39/50] Train Loss: 0.2533 Val Loss: nan\n",
+      "Epoch [40/50] Train Loss: 0.2519 Val Loss: nan\n",
+      "Epoch [41/50] Train Loss: 0.2506 Val Loss: nan\n",
+      "Epoch [42/50] Train Loss: 0.2420 Val Loss: nan\n",
+      "Epoch [43/50] Train Loss: 0.2446 Val Loss: nan\n",
+      "Epoch [44/50] Train Loss: 0.2451 Val Loss: nan\n",
+      "Epoch [45/50] Train Loss: 0.2467 Val Loss: nan\n",
+      "Epoch [46/50] Train Loss: 0.2408 Val Loss: nan\n",
+      "Epoch [47/50] Train Loss: 0.2425 Val Loss: nan\n",
+      "Epoch [48/50] Train Loss: 0.2390 Val Loss: nan\n",
+      "Epoch [49/50] Train Loss: 0.2362 Val Loss: nan\n",
+      "Epoch [50/50] Train Loss: 0.2384 Val Loss: nan\n"
      ]
     }
    ],
@@ -189,22 +191,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "326537b8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Scaler X saved to ../inference/scaler_x.joblib\n",
+      "Scaler Y saved to ../inference/scaler_y.joblib\n",
+      "Model saved to ../inference/model_parameters.pth\n"
+     ]
+    }
+   ],
    "source": [
     "# 5. Export the trained model for future\n",
     "import joblib\n",
     "\n",
-    "# Assuming 'scaler' is your fitted StandardScaler\n",
-    "scaler_path = \"scaler.joblib\"\n",
+    "# Path where fitted StandardScaler from scikit learn is saved\n",
+    "scaler_x_path = \"../inference/scaler_x.joblib\"\n",
+    "scaler_y_path = \"../inference/scaler_y.joblib\"\n",
     "\n",
     "# Save the scaler\n",
-    "joblib.dump(scaler, scaler_path)\n",
-    "print(f\"Scaler saved to {scaler_path}\")\n",
+    "joblib.dump(scaler_x, scaler_x_path)\n",
+    "joblib.dump(scaler_y, scaler_y_path)\n",
+    "print(f\"Scaler X saved to {scaler_x_path}\")\n",
+    "print(f\"Scaler Y saved to {scaler_y_path}\")\n",
+    "\n",
     "# Define path\n",
-    "model_path = \"inference/model_parameters.pth\"\n",
+    "model_path = \"../inference/model_parameters.pth\"\n",
     "\n",
     "# Save the state_dict (model weights and biases [parameters])\n",
     "torch.save(model.state_dict(), model_path)\n",
