Save model input configuration

--- a/training_validation/ModelTrainVal.ipynb
+++ b/training_validation/ModelTrainVal.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "id": "4a21a61d",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "id": "932b030b",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "427e497a",
    "metadata": {},
    "outputs": [],
@@ -77,19 +77,20 @@
     "train_dataset = HousePriceDataset(X_train, Y_train)\n",
     "val_dataset = HousePriceDataset(X_test, Y_test)\n",
     "\n",
+    "# Higher batch size for efficient parallel compute training (cuda) on gpu\n",
     "train_loader = DataLoader(train_dataset, batch_size=1024, shuffle=True)\n",
     "val_loader = DataLoader(val_dataset, batch_size=1024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "id": "9b1d52e4",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 3. Initialize Model\n",
-    "device = torch.device(\"cuda\")\n",
+    "device = torch.device(\"cuda\" if torch.cuda.is_available else \"cpu\")\n",
     "model_inp = X_train.shape[1]\n",
     "model = HousePricePredictor(input_dim=model_inp)\n",
     "model.to(device)\n",
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 37,
    "id": "a5c78a44",
    "metadata": {},
    "outputs": [
@@ -108,56 +109,56 @@
      "output_type": "stream",
      "text": [
       "Starting model training on cuda...\n",
-      "Epoch [1/50] Train Loss: 0.7301 Val Loss: nan\n",
-      "Epoch [2/50] Train Loss: 0.4406 Val Loss: nan\n",
-      "Epoch [3/50] Train Loss: 0.3873 Val Loss: nan\n",
-      "Epoch [4/50] Train Loss: 0.3533 Val Loss: nan\n",
-      "Epoch [5/50] Train Loss: 0.3507 Val Loss: nan\n",
-      "Epoch [6/50] Train Loss: 0.3383 Val Loss: nan\n",
-      "Epoch [7/50] Train Loss: 0.3288 Val Loss: nan\n",
-      "Epoch [8/50] Train Loss: 0.3220 Val Loss: nan\n",
-      "Epoch [9/50] Train Loss: 0.3171 Val Loss: nan\n",
-      "Epoch [10/50] Train Loss: 0.3173 Val Loss: nan\n",
-      "Epoch [11/50] Train Loss: 0.3060 Val Loss: nan\n",
-      "Epoch [12/50] Train Loss: 0.3044 Val Loss: nan\n",
-      "Epoch [13/50] Train Loss: 0.3039 Val Loss: nan\n",
-      "Epoch [14/50] Train Loss: 0.2939 Val Loss: nan\n",
-      "Epoch [15/50] Train Loss: 0.2908 Val Loss: nan\n",
-      "Epoch [16/50] Train Loss: 0.2862 Val Loss: nan\n",
-      "Epoch [17/50] Train Loss: 0.2794 Val Loss: nan\n",
-      "Epoch [18/50] Train Loss: 0.2824 Val Loss: nan\n",
-      "Epoch [19/50] Train Loss: 0.2809 Val Loss: nan\n",
-      "Epoch [20/50] Train Loss: 0.2745 Val Loss: nan\n",
-      "Epoch [21/50] Train Loss: 0.2791 Val Loss: nan\n",
-      "Epoch [22/50] Train Loss: 0.2719 Val Loss: nan\n",
-      "Epoch [23/50] Train Loss: 0.2694 Val Loss: nan\n",
-      "Epoch [24/50] Train Loss: 0.2680 Val Loss: nan\n",
-      "Epoch [25/50] Train Loss: 0.2636 Val Loss: nan\n",
-      "Epoch [26/50] Train Loss: 0.2628 Val Loss: nan\n",
-      "Epoch [27/50] Train Loss: 0.2615 Val Loss: nan\n",
-      "Epoch [28/50] Train Loss: 0.2628 Val Loss: nan\n",
-      "Epoch [29/50] Train Loss: 0.2639 Val Loss: nan\n",
-      "Epoch [30/50] Train Loss: 0.2560 Val Loss: nan\n",
-      "Epoch [31/50] Train Loss: 0.2647 Val Loss: nan\n",
-      "Epoch [32/50] Train Loss: 0.2527 Val Loss: nan\n",
-      "Epoch [33/50] Train Loss: 0.2517 Val Loss: nan\n",
-      "Epoch [34/50] Train Loss: 0.2549 Val Loss: nan\n",
-      "Epoch [35/50] Train Loss: 0.2498 Val Loss: nan\n",
-      "Epoch [36/50] Train Loss: 0.2545 Val Loss: nan\n",
-      "Epoch [37/50] Train Loss: 0.2488 Val Loss: nan\n",
+      "Epoch [1/50] Train Loss: 0.6517 Val Loss: nan\n",
+      "Epoch [2/50] Train Loss: 0.4091 Val Loss: nan\n",
+      "Epoch [3/50] Train Loss: 0.3780 Val Loss: nan\n",
+      "Epoch [4/50] Train Loss: 0.3435 Val Loss: nan\n",
+      "Epoch [5/50] Train Loss: 0.3329 Val Loss: nan\n",
+      "Epoch [6/50] Train Loss: 0.3332 Val Loss: nan\n",
+      "Epoch [7/50] Train Loss: 0.3196 Val Loss: nan\n",
+      "Epoch [8/50] Train Loss: 0.3173 Val Loss: nan\n",
+      "Epoch [9/50] Train Loss: 0.3076 Val Loss: nan\n",
+      "Epoch [10/50] Train Loss: 0.2990 Val Loss: nan\n",
+      "Epoch [11/50] Train Loss: 0.2983 Val Loss: nan\n",
+      "Epoch [12/50] Train Loss: 0.2929 Val Loss: nan\n",
+      "Epoch [13/50] Train Loss: 0.2891 Val Loss: nan\n",
+      "Epoch [14/50] Train Loss: 0.2883 Val Loss: nan\n",
+      "Epoch [15/50] Train Loss: 0.2855 Val Loss: nan\n",
+      "Epoch [16/50] Train Loss: 0.2789 Val Loss: nan\n",
+      "Epoch [17/50] Train Loss: 0.2792 Val Loss: nan\n",
+      "Epoch [18/50] Train Loss: 0.2803 Val Loss: nan\n",
+      "Epoch [19/50] Train Loss: 0.2743 Val Loss: nan\n",
+      "Epoch [20/50] Train Loss: 0.2721 Val Loss: nan\n",
+      "Epoch [21/50] Train Loss: 0.2725 Val Loss: nan\n",
+      "Epoch [22/50] Train Loss: 0.2731 Val Loss: nan\n",
+      "Epoch [23/50] Train Loss: 0.2714 Val Loss: nan\n",
+      "Epoch [24/50] Train Loss: 0.2664 Val Loss: nan\n",
+      "Epoch [25/50] Train Loss: 0.2668 Val Loss: nan\n",
+      "Epoch [26/50] Train Loss: 0.2651 Val Loss: nan\n",
+      "Epoch [27/50] Train Loss: 0.2632 Val Loss: nan\n",
+      "Epoch [28/50] Train Loss: 0.2616 Val Loss: nan\n",
+      "Epoch [29/50] Train Loss: 0.2687 Val Loss: nan\n",
+      "Epoch [30/50] Train Loss: 0.2640 Val Loss: nan\n",
+      "Epoch [31/50] Train Loss: 0.2599 Val Loss: nan\n",
+      "Epoch [32/50] Train Loss: 0.2652 Val Loss: nan\n",
+      "Epoch [33/50] Train Loss: 0.2569 Val Loss: nan\n",
+      "Epoch [34/50] Train Loss: 0.2570 Val Loss: nan\n",
+      "Epoch [35/50] Train Loss: 0.2596 Val Loss: nan\n",
+      "Epoch [36/50] Train Loss: 0.2562 Val Loss: nan\n",
+      "Epoch [37/50] Train Loss: 0.2592 Val Loss: nan\n",
       "Epoch [38/50] Train Loss: 0.2498 Val Loss: nan\n",
-      "Epoch [39/50] Train Loss: 0.2533 Val Loss: nan\n",
-      "Epoch [40/50] Train Loss: 0.2519 Val Loss: nan\n",
-      "Epoch [41/50] Train Loss: 0.2506 Val Loss: nan\n",
-      "Epoch [42/50] Train Loss: 0.2420 Val Loss: nan\n",
-      "Epoch [43/50] Train Loss: 0.2446 Val Loss: nan\n",
-      "Epoch [44/50] Train Loss: 0.2451 Val Loss: nan\n",
-      "Epoch [45/50] Train Loss: 0.2467 Val Loss: nan\n",
-      "Epoch [46/50] Train Loss: 0.2408 Val Loss: nan\n",
-      "Epoch [47/50] Train Loss: 0.2425 Val Loss: nan\n",
-      "Epoch [48/50] Train Loss: 0.2390 Val Loss: nan\n",
-      "Epoch [49/50] Train Loss: 0.2362 Val Loss: nan\n",
-      "Epoch [50/50] Train Loss: 0.2384 Val Loss: nan\n"
+      "Epoch [39/50] Train Loss: 0.2517 Val Loss: nan\n",
+      "Epoch [40/50] Train Loss: 0.2525 Val Loss: nan\n",
+      "Epoch [41/50] Train Loss: 0.2508 Val Loss: nan\n",
+      "Epoch [42/50] Train Loss: 0.2463 Val Loss: nan\n",
+      "Epoch [43/50] Train Loss: 0.2520 Val Loss: nan\n",
+      "Epoch [44/50] Train Loss: 0.2485 Val Loss: nan\n",
+      "Epoch [45/50] Train Loss: 0.2439 Val Loss: nan\n",
+      "Epoch [46/50] Train Loss: 0.2581 Val Loss: nan\n",
+      "Epoch [47/50] Train Loss: 0.2474 Val Loss: nan\n",
+      "Epoch [48/50] Train Loss: 0.2420 Val Loss: nan\n",
+      "Epoch [49/50] Train Loss: 0.2382 Val Loss: nan\n",
+      "Epoch [50/50] Train Loss: 0.2451 Val Loss: nan\n"
      ]
     }
    ],
@@ -191,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 40,
    "id": "326537b8",
    "metadata": {},
    "outputs": [
@@ -224,7 +225,12 @@
     "\n",
     "# Save the state_dict (model weights and biases [parameters])\n",
     "torch.save(model.state_dict(), model_path)\n",
-    "print(f\"Model saved to {model_path}\")"
+    "print(f\"Model saved to {model_path}\")\n",
+    "\n",
+    "# Save the model input configuration\n",
+    "with open(\"../inference/model_config.py\", \"w\") as config:\n",
+    "    config.write(f\"MODEL_INPUT_DIM = {model_inp}\")\n",
+    "    print(f\"Model input dimension saved to {model_path}\")\n"
    ]
   }
  ],
